# DragonRender

./: .gitignore  CMakeLists.txt  README.md
include/dragon/core/: bitmap_class.h  bsdf_class.h  camera_class.h  common.h  common_struct.h  denoiser_class.h  discrete_pdf_class.h  emitter.h  emitter_class.h  file_tool_class.h  image_tool.h  integrator.h  model_class.h  model_loader_class.h  object_class.h  sampler_class.h  scene.h  scene_class.h  shape_class.h  tracer_class.h  vector_class.h
include/ext/: indicators.h
meshes/: dragonobj.mtl
src/dragon/: main.cpp
src/dragon/bsdfs/: dielectric.cpp  diffuse.cpp  mirror.cpp
src/dragon/cameras/: pinhole_camera_class.cpp
src/dragon/core/: bitmap_class.cpp  denoiser_class.cpp  discrete_pdf_class.cpp  model_class.cpp  model_loader_class.cpp  object_class.cpp  shape_class.cpp  tracer_class.cpp
src/dragon/emitters/: area.cpp
src/dragon/integrators/: base.cpp  base_color.cpp  normal_color.cpp
src/dragon/samplers/: pcg_random.cpp
src/dragon/shapes/: obj.cpp  sphere.cpp
